[ADM-3952] Fix flickering on drag&drop

--- a/src/app/upload/drop-area/drop-area.component.scss
+++ b/src/app/upload/drop-area/drop-area.component.scss
@@ -6,7 +6,7 @@
 }
 
 .wrapper {
-  margin-bottom: 20px;
+  margin-bottom: $spacing;
 }
 
 .drag-area {
@@ -23,7 +23,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  margin-bottom: 0;
+  &.photos-number-10 {
+    height: 258px;
+  }
   div {
     display: none;
   }
